--- a/birthday-reminder/src/index.css
+++ b/birthday-reminder/src/index.css
@@ -10,4 +10,37 @@
 
 body {
   font-family: "Mulish", sans-serif;
+  background: #283593;
+  color: #102a42;
+  line-height: 1.5;
+  font-size: 0.875rem;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 90vw;
+  margin: 5rem;
+  background: #e8eaf6;
+  max-width: 460px;
+  border-radius: 0.25rem;
+  padding: 1.5rem 2rem;
+  box-shadow: 0 5px 15px #00000066;
+}
+.container h3 {
+  font-weight: 600;
+  text-transform: none;
+  margin-bottom: 2rem;
+}
+
+.error_page {
+  color: #283593;
+  background: #e8eaf6;
+  width: 60vw;
+  margin: auto;
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px;
 }
