--- a/quiz-app/src/app.css
+++ b/quiz-app/src/app.css
@@ -1,5 +1,38 @@
 .app {
   height: 100vh;
   display: flex;
-  background-color: #020202;
+  background-color: #020230;
+  color: white;
+}
+
+.main {
+  width: 75%;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #020230),
+    url("../src/assets/bg.jpg") center;
+}
+
+.pyramid {
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.pointsList {
+  list-style: none;
+  width: 100%;
+  padding: 20px;
+}
+
+.pointsListItem {
+}
+
+.pointsListItemRound {
+  font-size: 18px;
+  font-weight: 100;
+}
+
+.pointsListItemAmount {
+  font-size: 20px;
+  font-weight: 300;
 }
