--- a/quiz-app/src/app.css
+++ b/quiz-app/src/app.css
@@ -7,8 +7,68 @@
 
 .main {
   width: 75%;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #020230),
-    url("../src/assets/bg.jpg") center;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #020230), url('../src/assets/bg.jpg') center;
+  display: flex;
+  flex-direction: column;
+}
+
+.top {
+  height: 50%;
+  position: relative;
+}
+
+.timer {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  border: 5px solid white;
+  display: flex;
+  place-items: center;
+  place-content: center;
+  font-size: 30px;
+  font-weight: 700;
+  position: absolute;
+  bottom: 10px;
+  left: 80px;
+}
+
+.bottom {
+  height: 50%;
+}
+
+.trivia {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.question {
+  width: 80%;
+  background: linear-gradient(#100241, black);
+  border: 2px solid white;
+  text-align: center;
+  padding: 20px;
+  border-radius: 10px;
+  font-size: 20px;
+}
+.answers {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.choice {
+  width: 40%;
+  padding: 10px;
+  text-align: center;
+  background: linear-gradient(#0e0124, #22074d);
+  border: 1px solid white;
+  border-radius: 15px;
+  font-size: 20px;
+  font-weight: 300;
+  margin: 0 10px 20px 10px;
 }
 
 .pyramid {
@@ -25,11 +85,20 @@
 }
 
 .pointsListItem {
+  display: flex;
+  place-items: center;
+  padding: 8px;
+  border-radius: 10px;
+}
+
+.pointsListItem.active {
+  background-color: teal;
 }
 
 .pointsListItemRound {
   font-size: 18px;
   font-weight: 100;
+  width: 30%;
 }
 
 .pointsListItemAmount {
